--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,10 @@
         should appear below.
     </string>
     <string name="loading">Loading</string>
+    <string name="connected_devices">Connected devices:</string>
+    <string name="your_ip">Your IP address is:</string>
+    <string name="current_bomb_time">Current bomb time</string>
+    <string name="start_time">00:00:00</string>
+    <string name="drop_info">Shake the phone to drop the bomb!</string>
+    <string name="start_game">Start game</string>
 </resources>
