Added Wifi boardcastReceiver

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
         device close to your friends\' devices. The devices will then exchange data and your friends
         should appear below.
     </string>
-    <string name="loading">Loading</string>
+    <string name="loading">Waiting for WiFi</string>
     <string name="connected_devices">Connected devices:</string>
     <string name="your_ip">Your IP address is:</string>
     <string name="current_bomb_time">Current bomb time</string>
