--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="start_time">00:00:00</string>
     <string name="drop_info">Shake the phone to drop the bomb!</string>
     <string name="start_game">Start game</string>
+    <string name="wait_for_host">Waiting for host to start Ze Game!</string>
 </resources>
