--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="drop_info">Shake the phone to drop the bomb!</string>
     <string name="start_game">Start game</string>
     <string name="wait_for_host">Waiting for host to start Ze Game!</string>
+    <string name="game_time_was">The random timer was</string>
 </resources>
